[gd_scene load_steps=17 format=2]

[ext_resource path="res://Node.gd" type="Script" id=1]
[ext_resource path="res://grass.tres" type="TileSet" id=2]
[ext_resource path="res://FrameBasic.png" type="Texture" id=3]
[ext_resource path="res://GoldNode.tscn" type="PackedScene" id=4]
[ext_resource path="res://Drill.tscn" type="PackedScene" id=5]
[ext_resource path="res://Machine.tscn" type="PackedScene" id=6]
[ext_resource path="res://Machine.gd" type="Script" id=7]
[ext_resource path="res://cooper.png" type="Texture" id=8]
[ext_resource path="res://money.png" type="Texture" id=9]
[ext_resource path="res://Pointer.gd" type="Script" id=10]
[ext_resource path="res://PayDayTimer.tscn" type="PackedScene" id=11]
[ext_resource path="res://Box.tscn" type="PackedScene" id=12]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="Theme" id=3]
VScrollBar/icons/decrement = null
VScrollBar/icons/decrement_highlight = null
VScrollBar/icons/increment = null
VScrollBar/icons/increment_highlight = null
VScrollBar/styles/grabber = null
VScrollBar/styles/grabber_highlight = null
VScrollBar/styles/grabber_pressed = null
VScrollBar/styles/scroll = SubResource( 1 )
VScrollBar/styles/scroll_focus = null
VSlider/icons/grabber = null
VSlider/icons/grabber_disabled = null
VSlider/icons/grabber_highlight = null
VSlider/icons/tick = null
VSlider/styles/focus = null
VSlider/styles/grabber_area = null
VSlider/styles/grabber_disabled = null
VSlider/styles/grabber_highlight = null
VSlider/styles/slider = SubResource( 2 )

[sub_resource type="CircleShape2D" id=4]

[node name="WARDO" type="Node"]
script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 56, 56 )
scale = Vector2( 0.5, 0.5 )
tile_set = ExtResource( 2 )
format = 1
tile_data = PoolIntArray( -1, 0, 0, -65534, 0, 0, -65531, 0, 0, -65528, 0, 0, -65525, 0, 0, -65522, 0, 0, -65519, 0, 0, -65516, 0, 0, -65514, 0, 0, -65512, 0, 0, 196607, 0, 0, 131074, 0, 0, 131077, 0, 0, 131080, 0, 0, 131083, 0, 0, 131086, 0, 0, 131089, 0, 0, 131092, 0, 0, 131095, 0, 0, 393215, 0, 0, 327682, 0, 0, 327685, 0, 0, 327688, 0, 0, 327691, 0, 0, 327694, 0, 0, 327697, 0, 0, 327700, 0, 0, 327703, 0, 0, 589823, 0, 0, 524290, 0, 0, 524293, 0, 0, 524296, 0, 0, 524299, 0, 0, 524302, 0, 0, 524305, 0, 0, 524308, 0, 0, 524311, 0, 0, 655380, 0, 0, 786431, 0, 0, 720898, 0, 0, 720901, 0, 0, 720904, 0, 0, 720907, 0, 0, 720910, 0, 0, 720913, 0, 0, 720916, 0, 0, 720919, 0, 0, 917503, 0, 0, 851970, 0, 0, 851973, 0, 0, 851976, 0, 0, 851979, 0, 0, 851982, 0, 0, 851985, 0, 0, 851988, 0, 0, 851990, 0, 0, 851991, 0, 0 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 498.231, 300.015 )
current = true

[node name="FrameBasic" type="Sprite" parent="."]
position = Vector2( 500.014, 299.158 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
margin_left = 926.842
margin_top = 27.421
margin_right = 969.842
margin_bottom = 41.421
text = "TOOLS"

[node name="GoldNodes" type="Node" parent="."]

[node name="Gold Node" parent="GoldNodes" instance=ExtResource( 4 )]
position = Vector2( 774.995, 99.8448 )

[node name="Gold Node3" parent="GoldNodes" instance=ExtResource( 4 )]
position = Vector2( 757.266, 227.269 )

[node name="Gold Node2" parent="GoldNodes" instance=ExtResource( 4 )]
position = Vector2( 646.909, 131.49 )

[node name="SideBar" type="Node" parent="."]

[node name="Drill" parent="SideBar" instance=ExtResource( 5 )]

[node name="Machine" parent="SideBar" instance=ExtResource( 6 )]
position = Vector2( 950, 199 )
script = ExtResource( 7 )

[node name="cooper" type="Sprite" parent="."]
position = Vector2( 200, 576 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 8 )

[node name="money" type="Sprite" parent="."]
position = Vector2( 370.488, 574.495 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 9 )

[node name="CooperValue" type="TextEdit" parent="."]
margin_left = 226.0
margin_top = 563.0
margin_right = 336.0
margin_bottom = 588.0
hint_tooltip = "Amount of Gold"
theme = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "100"
readonly = true
smooth_scrolling = true

[node name="MoneyValue" type="TextEdit" parent="."]
margin_left = 391.0
margin_top = 563.0
margin_right = 501.0
margin_bottom = 588.0
hint_tooltip = "Amount of Gold"
theme = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "100"
readonly = true
smooth_scrolling = true

[node name="Pointer" type="Area2D" parent="."]
script = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pointer"]
scale = Vector2( 0.001, 0.001 )
shape = SubResource( 4 )

[node name="PayDayTimer" parent="." instance=ExtResource( 11 )]
wait_time = 5.0
autostart = true

[node name="MoneyDayTimer" parent="." instance=ExtResource( 11 )]
wait_time = 5.0
autostart = true

[node name="Box" parent="." instance=ExtResource( 12 )]
[connection signal="selected" from="SideBar/Drill" to="." method="_on_Drill_selected"]
[connection signal="area_entered" from="SideBar/Machine" to="SideBar/Machine" method="_on_Machine_area_entered"]
[connection signal="machineselected" from="SideBar/Machine" to="." method="_on_Machine_machineselected"]
[connection signal="timeout" from="PayDayTimer" to="." method="_on_PayDayTimer_timeout"]
[connection signal="timeout" from="MoneyDayTimer" to="." method="_on_MoneyDayTimer_timeout"]
[connection signal="moneybox" from="Box" to="." method="_on_Box_moneybox"]
